--- a/src/app/point-map/point-map.component.html
+++ b/src/app/point-map/point-map.component.html
@@ -1,3 +1,9 @@
-<agm-map [latitude]="lat" [longitude]="lng">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)">
+  <agm-marker
+    *ngFor="let m of markers; let i = index"
+    [latitude]="m.lat"
+    [longitude]="m.lng"
+    [label]="m.label"
+    (markerClick)="markerClicked(m)">
+  </agm-marker>
 </agm-map>
