--- a/src/app/template-editor/template-editor.component.html
+++ b/src/app/template-editor/template-editor.component.html
@@ -1,10 +1,13 @@
 <div>
   <md-input-container>
-    <textarea mdInput rows="20" cols="50" placeholder="List template"></textarea>
+    <textarea mdInput rows="20" cols="50" placeholder="Item template" [(ngModel)]="templateString" ></textarea>
   </md-input-container>
 </div>
 <div>
   <md-input-container>
-    <textarea mdInput rows="20" cols="50" placeholder="Item template"></textarea>
+    <textarea mdInput rows="20" cols="50" placeholder="Result" [(ngModel)]="result"></textarea>
   </md-input-container>
+</div>
+<div>
+  <button md-raised-button (click)="export()">Export</button>
 </div>
